--- a/.github/workflows/build-conda.yml
+++ b/.github/workflows/build-conda.yml
@@ -16,7 +16,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        python: ['3.10', '3.11', '3.12']
+        include:
+          - os: ubuntu-latest
+            python: '3.13'
 
     steps:
       - name: Checkout repository
