use ninja generator for windows builds

--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -16,8 +16,7 @@ build:
     - mkdir build || true  # [not win]
     - if not exist build mkdir build  # [win]
     - cd build
-    - set "CMAKE_GENERATOR="  # [win]
-    - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%PREFIX% -DPython3_EXECUTABLE=%PYTHON% -DOCCT_RT_DIR=%SRC_DIR%\external\OCCT-RT  # [win]
+    - cmake -G Ninja .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%PREFIX% -DPython3_EXECUTABLE=%PYTHON% -DOCCT_RT_DIR=%SRC_DIR%\external\OCCT-RT  # [win]
     - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$PREFIX -DPython3_EXECUTABLE=$PYTHON -DOCCT_RT_DIR=$SRC_DIR/external/OCCT-RT  # [not win]
     - cmake --build . --parallel --config Release
     - xcopy /E /I occt_rt %SP_DIR%\occt_rt  # [win]
