--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,12 +147,18 @@ target_link_libraries(OCCTRT PRIVATE
 )
 
 # Set output directory (disable per-config subdirectories for multi-config generators)
+# On Windows, .pyd files are DLLs so need RUNTIME_OUTPUT_DIRECTORY
 set_target_properties(OCCTRT PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/occt_rt"
     LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/occt_rt"
     LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/occt_rt"
     LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/occt_rt"
     LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/occt_rt"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/occt_rt"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/occt_rt"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/occt_rt"
+    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/occt_rt"
+    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/occt_rt"
     SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
 )
 
