Fix Python extension suffix on macOS: use .so not .dylib
Python extension modules must have .so suffix (e.g. _OCCTRT.cpython-310-darwin.so),
not .dylib. CMake was defaulting to macOS shared library convention.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,8 @@ set_target_properties(OCCTRT PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/occt_rt"
     RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/occt_rt"
     SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
+    # Python extension modules need .so suffix on macOS (not .dylib)
+    SUFFIX ".${Python3_SOABI}.so"
 )
 
 # Copy __init__.py to build directory
